# player

./: .gitignore  AUTHORS  Bourama guitare - yeleman yeleman so [Fei8q6pReJM].f135.mp4.part  Makefile.am  README.md  configure.ac  ecotube.doap  meson-post-install.py  meson.build
data/: Makefile.am  io.github.ecotubehq.player.appdata.xml.in  io.github.ecotubehq.player.desktop.in  io.github.ecotubehq.player.gschema.xml  io.github.ecotubehq.player.service.in  meson.build  modernz.lua  mpv-fsr-vulkan.conf  mpv-fsr.conf  mpv-vulkan.conf  playlist.m3u  thumbfast.lua
mpv/downloads/: Eagles - Hotel California (Live 1977) (Official Video) [HD].en-US.vtt
po/: POTFILES.in  ar.po  bg.po  ca.po  celluloid.pot  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  ms.po  nb_NO.po  nl.po  oc.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+9 more)
src/: Makefile.am  celluloid-application.c  celluloid-common.c  celluloid-common.h  celluloid-control-box.c  celluloid-controller-actions.c  celluloid-controller-input.c  celluloid-controller.c  celluloid-def.h  celluloid-header-bar.c  celluloid-main-window.c  celluloid-menu.c  celluloid-model.c  celluloid-model.h  celluloid-open-location-dialog.c  celluloid-player-options.c  celluloid-player.c  celluloid-playlist-widget.c  celluloid-preferences-dialog.c  celluloid-video-area.c  celluloid-video-area.h  celluloid-view.c  celluloid-view.h  meson.build
src/ecotube/: ecotube-thumbnail.c  ecotube-thumbnail.h  ecotube-yt-dlp-updater.c  ecotube-yt-dlp-updater.h  thumbnailer.c  thumbnailer.h  utils.c  utils.h
